<resources>
    <string name="app_name">SocialHelper</string>
    <string name="logo">SH</string>
    <string name="welcome1">Добро</string>
    <string name="user_input_hint">Имя</string>
    <string name="password_input_hint">Пароль</string>
    <string name="user_input_error">Введите имя</string>
    <string name="password_input_error">Пароль не должен быть пустым</string>
    <string name="get_spot">Уступить место</string>
    <string name="sign_in">Регистрация</string>
    <string name="social_helper">SocialHelper!</string>
    <string name="positive_response">Регистрация завершена успешно</string>
    <string name="welcome2">пожаловать</string>
    <string name="welcome3">в</string>
    <string name="retry_later">Нет подключения, повторите попытку позже</string>
    <string name="bluetooth_unavailable">Блютуз недоступен на данном устройстве</string>
    <string name="you_send_request">Вы подали заявку как:</string>
    <string name="number_reference">Номер справки</string>
    <string name="surname">Фамилия</string>
    <string name="surname_input_error">Введите фамилию</string>
    <string name="enter">Войти</string>
    <string name="login">Логин</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="enter_name_surname">Введите имя и фамилию:</string>
    <string name="enter_login_email_password">Введите логин, почту и пароль:</string>
    <string name="wrong_login">Неверный логин</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="wrong_login_or_password">Неверный логин или пароль</string>
    <string name="enter_login">Введите логин</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="enter_reference_number">Введите номер справки:</string>
    <string name="registration">Регистрация</string>
    <string name="clear_fields">Удалить поля</string>
    <string name="exit">Выйти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="enter_login_email">Введите логин и почту для восстановления пароля:</string>
    <string name="email">Почта</string>
    <string name="restore">Восстановить</string>
    <string name="back">Back</string>
    <string name="empty_field_error">Поле должно быть заполнено</string>
    <string name="wrong_email_input">Неправильный формат почты</string>
    <string name="enter_key">Введите ключ:</string>
    <string name="key">Ключ</string>
    <string name="verify">Подтвердить</string>
    <string name="info">Информация</string>
    <string name="wrong_email">Неверная почта</string>
    <string name="wrong_key">Неверный ключ</string>
    <string name="change_password">Сменить пароль</string>
    <string name="enter_old_pass">Введите старый пароль:</string>
    <string name="enter_new_pass">Введите новый пароль:</string>
    <string name="new_pass">Новый пароль</string>
    <string name="change_pass">Сменить пароль</string>
    <string name="check_reference">Проверьте номер справки</string>
    <string name="wait">Ждите…</string>
    <string name="user_exist">Пользователь с такими данными уже существует</string>
    <string name="try_another_login">Попробуйте другой логин</string>
    <string name="retry_register">Возникла неизвестная ошибка при регистрации, поробуйте ещё раз</string>
    <string name="get_back_to_login">Вернитесь на главный экран и введите логин,
                                        пароль, чтобы зайти в приложение</string>
    <string name="spot_is_empty">Место свободно, присаживайтесь</string>
    <string name="connect_to_bluetooth">Разрешите блютуз, затем нажмите кнопку</string>
    <string name="reboot_app">Критическая ошибка, перезапустите приложение</string>
    <string name="choose_category">Выберите категорию:</string>
    <string name="категории">Категории</string>
    <string-array name="category">
        <item>Инвалид</item>
        <item>Беременная</item>
        <item>Соц.работник</item>
    </string-array>
    <string-array name="categoryEng">
        <item>wheelchair</item>
        <item>pregnant</item>
        <item>socialworker</item>
    </string-array>
    <string name="time">Время</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_subway">Введите начальную и конечную станцию метро:</string>
    <string name="start_station">Станция 1</string>
    <string name="end_station">Станция 2</string>
    <string name="enter_time">Выберите время:</string>
    <string name="comment">Комментарий:</string>
    <string name="send">Отправить</string>
    <string name="from_station">станции</string>
    <string name="accept">Принять</string>
    <string name="without_comment">Без комментария</string>
    <string name="full_comment">Комментарий: \n%1$s</string>
    <string name="to_complete">Выполнить</string>
    <string name="request_complete">Заказ выполнен</string>
    <string name="status_wait">Статус: ожидается</string>
    <string name="status_in_progress">Статус: в работе</string>
    <string name="status_complete">Статус: выполнен</string>
    <string name="direction">Direction</string>
    <string name="refresh">Обновить</string>
    <string name="connected">Подключено</string>
    <string name="order_accepted">Заказ принят</string>
    <string name="order_cancel">Заказ отменён</string>
    <string name="cancel">Отменить</string>
    <string name="subway_map">Карта метро</string>
    <string name="close">Close</string>
    <string name="first_station">First Station</string>
    <string name="line">line</string>
    <string name="eight_a">8a</string>
    <string-array name="line_one">
        <item>Бульвар Рокоссовского-1</item>
        <item>Черкизовская</item>
        <item>Преображенская площадь</item>
        <item>Сокольники</item>
        <item>Красносельская</item>
        <item>Комсомольская-1</item>
        <item>Красные Ворота</item>
        <item>Чистые пруды</item>
        <item>Лубянка</item>
        <item>Охотный Ряд</item>
        <item>Библиотека имени Ленина</item>
        <item>Кропоткинская</item>
        <item>Парк культуры-1</item>
        <item>Фрунзенская</item>
        <item>Спортивная</item>
        <item>Воробьевы горы</item>
        <item>Университет</item>
        <item>Проспект Вернадского</item>
        <item>Юго-Западная</item>
        <item>Тропарево</item>
        <item>Румянцево</item>
        <item>Саларьево</item>
        <item>Филатов Луг</item>
        <item>Прокшино</item>
        <item>Ольховая</item>
        <item>Коммунарка</item>
    </string-array>
    <string-array name="line_two">
        <item>Ховрино</item>
        <item>Беломорская</item>
        <item>Речной вокзал</item>
        <item>Водный стадион</item>
        <item>Войковская</item>
        <item>Сокол</item>
        <item>Аэропорт</item>
        <item>Динамо</item>
        <item>Белорусская-2</item>
        <item>Маяковская</item>
        <item>Тверская</item>
        <item>Театральная</item>
        <item>Новокузнецкая</item>
        <item>Павелецкая-2</item>
        <item>Автозаводская-2</item>
        <item>Технопарк</item>
        <item>Коломенская</item>
        <item>Каширская</item>
        <item>Кантемировская</item>
        <item>Царицыно</item>
        <item>Орехово</item>
        <item>Домодедовская</item>
        <item>Красногвардейская</item>
        <item>Алма-Атинская</item>
    </string-array>
    <string-array name="line_three">
        <item>Гольяново</item>
        <item>Щелковская</item>
        <item>Первомайская</item>
        <item>Измайловская</item>
        <item>Партизанская</item>
        <item>Семеновская</item>
        <item>Электрозаводская</item>
        <item>Бауманская</item>
        <item>Курская-3</item>
        <item>Площадь Революции</item>
        <item>Арбатская-3</item>
        <item>Смоленская-3</item>
        <item>Киевская-3</item>
        <item>Парк Победы-3</item>
        <item>Славянский бульвар</item>
        <item>Кунцевская-3</item>
        <item>Молодежная</item>
        <item>Крылатское</item>
        <item>Строгино</item>
        <item>Мякинино</item>
        <item>Волоколамская</item>
        <item>Митино</item>
        <item>Пятницкое шоссе</item>
    </string-array>
    <string-array name="line_four">
        <item>Кунцевская-4</item>
        <item>Пионерская</item>
        <item>Филевский парк</item>
        <item>Багратионовская</item>
        <item>Фили</item>
        <item>Кутузовская-4</item>
        <item>Студенческая</item>
        <item>Международная</item>
        <item>Выставочная </item>
        <item>Киевская-4</item>
        <item>Смоленская-4</item>
        <item>Арбатская-3</item>
        <item>Александровский сад</item>
    </string-array>
    <string-array name="line_five">
        <item>Киевская-5</item>
        <item>Краснопресненская</item>
        <item>Белорусская-5</item>
        <item>Новослободская</item>
        <item>Суворовская</item>
        <item>Проспект Мира-5</item>
        <item>Комсомольская-5</item>
        <item>Курская-5</item>
        <item>Таганская-5</item>
        <item>Павелецкая-5</item>
        <item>Добрынинская</item>
        <item>Октябрьская-5</item>
        <item>Парк культуры-5</item>
    </string-array>
    <string-array name="line_six">
        <item>Медведково</item>
        <item>Бабушкинская</item>
        <item>Свиблово</item>
        <item>Ботанический сад-6</item>
        <item>ВДНХ</item>
        <item>Алексеевская</item>
        <item>Рижская</item>
        <item>Проспект Мира-6</item>
        <item>Сухаревская</item>
        <item>Тургеневская</item>
        <item>Китай-город-6</item>
        <item>Третьяковская-6</item>
        <item>Октябрьская-6</item>
        <item>Шаболовская</item>
        <item>Ленинский проспект</item>
        <item>Академическая</item>
        <item>Профсоюзная</item>
        <item>Новые Черемушки</item>
        <item>Калужская</item>
        <item>Беляево</item>
        <item>Коньково</item>
        <item>Теплый Стан</item>
        <item>Ясенево</item>
        <item>Новоясеневская</item>
    </string-array>
    <string-array name="line_seven">
        <item>Планерная</item>
        <item>Сходненская</item>
        <item>Тушинская</item>
        <item>Спартак</item>
        <item>Щукинская</item>
        <item>Октябрьское Поле</item>
        <item>Полежаевская</item>
        <item>Беговая</item>
        <item>Улица 1905 года</item>
        <item>Баррикадная</item>
        <item>Пушкинская</item>
        <item>Кузнецкий Мост</item>
        <item>Китай-город-7</item>
        <item>Таганская-7</item>
        <item>Пролетарская</item>
        <item>Волгоградский проспект</item>
        <item>Текстильщики</item>
        <item>Кузьминки</item>
        <item>Рязанский проспект</item>
        <item>Выхино</item>
        <item>Лермонтовский проспект</item>
        <item>Жулебино</item>
        <item>Котельники</item>
    </string-array>
    <string-array name="line_eight_a">
        <item>Савеловская-8</item>
        <item>Петровский парк-8</item>
        <item>ЦСКА-8</item>
        <item>Хорошевская-8</item>
        <item>Шелепиха-8</item>
        <item>Деловой центр-8</item>
        <item>Парк Победы-8</item>
        <item>Минская</item>
        <item>Ломоносовский проспект</item>
        <item>Раменки</item>
        <item>Мичуринский проспект</item>
        <item>Озерная</item>
        <item>Говорово</item>
        <item>Солнцево</item>
        <item>Боровское шоссе</item>
        <item>Новопеределкино</item>
        <item>Рассказовка</item>
        <item>Пыхтино</item>
    </string-array>
</resources>