<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.socialhelper.viewmodels.ChangeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ChangePasswordFragment"
        android:padding="16dp">

        <ImageView
            android:id="@+id/exit_from_change_password"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_big_back_arrow"
            android:contentDescription="@string/exit" />

        <TextView
            android:id="@+id/textChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginEnd="@dimen/dimen_4dp"
            android:padding="@dimen/dimen_4dp"
            android:gravity="end"
            android:text="@string/enter_old_pass"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="italic"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginEnd="@dimen/dimen_4dp"
            android:layout_below="@+id/textChangePass"
            app:errorEnabled="true"
            android:hint="@string/password_input_hint"
            app:boxCornerRadiusTopEnd="@dimen/dimen_6dp"
            app:boxCornerRadiusTopStart="@dimen/dimen_6dp"
            app:endIconMode="password_toggle"
            app:counterMaxLength="8"
            app:counterEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/old_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textEnterNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oldPassword"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginEnd="@dimen/dimen_4dp"
            android:padding="@dimen/dimen_4dp"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:gravity="end"
            android:text="@string/enter_new_pass"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textEnterNewPass"
            app:errorEnabled="true"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginEnd="@dimen/dimen_4dp"
            android:hint="@string/new_pass"
            app:boxCornerRadiusTopEnd="@dimen/dimen_6dp"
            app:boxCornerRadiusTopStart="@dimen/dimen_6dp"
            app:endIconMode="password_toggle"
            app:counterMaxLength="8"
            app:counterEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_new_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enterNewPassword"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:layout_marginEnd="@dimen/dimen_4dp"
            app:errorEnabled="true"
            android:hint="@string/confirm_password"
            app:boxCornerRadiusTopEnd="@dimen/dimen_6dp"
            app:boxCornerRadiusTopStart="@dimen/dimen_6dp"
            app:endIconMode="password_toggle"
            app:counterMaxLength="8"
            app:counterEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_new_pass_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_change_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmNewPassword"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:text="@string/change_pass"
            android:onClick="@{() -> viewModel.onStartChange()}"/>

    </RelativeLayout>
</layout>