<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.socialhelper.viewmodels.RestoreViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".ui.RestorePasswordFragment">


            <TextView
                android:id="@+id/enter_login_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="116dp"
                android:gravity="center"
                android:text="@string/enter_login_email"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginRestore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:hint="@string/login"
                app:boxCornerRadiusBottomEnd="6dp"
                app:boxCornerRadiusBottomStart="6dp"
                app:boxCornerRadiusTopEnd="6dp"
                app:boxCornerRadiusTopStart="6dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_login_post"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_restore_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailRestore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxCornerRadiusBottomEnd="6dp"
                app:boxCornerRadiusBottomStart="6dp"
                app:boxCornerRadiusTopEnd="6dp"
                app:boxCornerRadiusTopStart="6dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginRestore"
                app:endIconMode="clear_text"
                android:imeOptions="actionDone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/restore_email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_restore_request_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/restore"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailRestore"
                android:onClick="@{() -> viewModel.onStartRestore()}"/>

            <ImageView
                android:id="@+id/back_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_big_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back"
                android:onClick="@{() -> viewModel.onNavigateBack()}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>